Convert exercise form into htmx driven

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <script src="https://unpkg.com/htmx.org"></script>
     <script src="https://unpkg.com/hyperscript.org"></script>
 
+    <link href="/static/css/style.css" rel="stylesheet">
+
     <script>
         function debounce(func, timeout = 300) {
             let timer;
