--- a/templates/partials/topset.html
+++ b/templates/partials/topset.html
@@ -14,19 +14,22 @@
         <div class="flex items-center">
             <input type="number"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full md:w-1/4"
-                name="repetitions" value="{{ topset['Repetitions'] }}"> x <input type="number"
+                name="repetitions" value="{{ topset['Repetitions'] }}">
+            <p class="px-2">x</p>
+            <input type="number"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 w-full md:w-1/4"
-                name="weight" value="{{ topset['Weight'] }}">kg
+                name="weight" value="{{ topset['Weight'] }}">
+            <p class="px-2">kg</p>
         </div>
     </td>
     <td class="border-t-0 px-4 align-middle text-xs whitespace-nowrap p-4">
         <a hx-put="{{ url_for('update_topset', person_id=topset['PersonId'], workout_id=topset['WorkoutId'], topset_id=topset['TopSetId']) }}"
             hx-include="[name='exercise_id'], [name='repetitions'], [name='weight']"
-            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer">
             Update
         </a>
         <a hx-get="{{ url_for('get_topset', person_id=topset['PersonId'], workout_id=topset['WorkoutId'], topset_id=topset['TopSetId']) }}"
-            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer">
             Cancel
         </a>
     </td>
