--- a/templates/person.html
+++ b/templates/person.html
@@ -63,7 +63,7 @@
 
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                         <a href="{{ url_for('get_workout' ,person_id=person['PersonId'], workout_id=w['WorkoutId']) }}"
-                                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2">
+                                            class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer">
                                             Edit
                                         </a>
 
@@ -71,7 +71,7 @@
                                             action="{{ url_for('delete_workout', person_id=person['PersonId'], workout_id=w['WorkoutId']) }}"
                                             method="delete" class="inline">
                                             <button
-                                                class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2"
+                                                class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer"
                                                 type="submit">Delete</button>
                                         </form>
                                     </td>
