--- a/templates/partials/page/person.html
+++ b/templates/partials/page/person.html
@@ -1,4 +1,4 @@
-<div id="person-view">
+<div>
     <div class="flex justify-center">
         <div class="bg-white shadow rounded-lg p-4 sm:w-full xl:p-8 md:w-full lg:w-10/12 xl:w-8/12 2xl:w-6/12">
 
@@ -22,7 +22,7 @@
                 {% for e in person['Exercises'] %}
                 <div class="flex items-center mr-4"
                     hx-post="{{ url_for('filter_exercises_for_person', person_id=person['PersonId']) }}"
-                    hx-include="[name='exercise_id']" hx-target="#person-view" hx-swap="outerHTML">
+                    hx-include="[name='exercise_id']" hx-target="#container" hx-swap="outerHTML">
                     <input {{ is_checked(e['ExerciseId'], selected_exercise_ids) }} type="checkbox" name="exercise_id"
                         value="{{ e['ExerciseId'] }}"
                         class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
