Fix for filter not working after selecting a single exercise

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,6 +3,6 @@
 {% block content %}
 
 {{ render_partial('partials/page/dashboard.html',
-people=people, exercises=exercises) }}
+model=model) }}
 
 {% endblock %}
