--- a/templates/person.html
+++ b/templates/person.html
@@ -3,6 +3,6 @@
 {% block content %}
 
 {{ render_partial('partials/page/person.html',
-person=person, is_filtered=False) }}
+person=person, is_filtered=is_filtered or False, selected_exercise_ids=selected_exercise_ids) }}
 
 {% endblock %}
