Refactor start_date as date rather then string

--- a/templates/partials/start_date.html
+++ b/templates/partials/start_date.html
@@ -1,5 +1,5 @@
 {% if is_edit|default(false, true) == false %}
-<span class="text-base font-normal text-gray-500">{{ start_date }}</span>
+<span class="text-base font-normal text-gray-500">{{ strftime(start_date, "%b %d %Y") }}</span>
 <a class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg inline-flex items-center p-2 cursor-pointer"
     hx-get="{{ url_for('get_workout_start_date_edit_form', person_id=person_id, workout_id=workout_id) }}"
     hx-target="#edit-start-date">
