--- a/templates/partials/page/person.html
+++ b/templates/partials/page/person.html
@@ -106,7 +106,7 @@
                                 {% for w in person['Workouts'] %}
                                 <tr>
                                     <td class="p-4 whitespace-nowrap text-sm font-normal text-gray-500">
-                                        {{ w['StartDate'] }}
+                                        {{ strftime(w['StartDate'], "%b %d %Y") }}
                                     </td>
 
                                     {% for e in exercise_list %}
