--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -4,6 +4,6 @@
 
 {{ render_partial('partials/page/calendar.html',
 person=person, selected_date=selected_date, selected_view=selected_view, next_date=next_date,
-previous_date=previous_date) }}
+previous_date=previous_date, start_date=start_date, end_date=end_date) }}
 
 {% endblock %}
